@@ -3,22 +3,14 @@ package org.openmetadata.service.search.indexes;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 import org.openmetadata.schema.entity.domains.DataProduct;
 import org.openmetadata.service.Entity;
 import org.openmetadata.service.search.SearchIndexUtils;
 import org.openmetadata.service.search.models.SearchSuggest;
 import org.openmetadata.service.util.JsonUtils;
 
-public class DataProductIndex implements SearchIndex {
-
+public record DataProductIndex(DataProduct dataProduct) implements SearchIndex {
   private static final List<String> excludeFields = List.of("changeDescription");
-
-  final DataProduct dataProduct;
-
-  public DataProductIndex(DataProduct dataProduct) {
-    this.dataProduct = dataProduct;
-  }
 
   public Map<String, Object> buildESDoc() {
     Map<String, Object> doc = JsonUtils.getMap(dataProduct);
@@ -31,7 +23,7 @@ public class DataProductIndex implements SearchIndex {
         "fqnParts",
         getFQNParts(
             dataProduct.getFullyQualifiedName(),
-            suggest.stream().map(SearchSuggest::getInput).collect(Collectors.toList())));
+            suggest.stream().map(SearchSuggest::getInput).toList()));
     doc.put("entityType", Entity.DATA_PRODUCT);
     doc.put("owner", getEntityWithDisplayName(dataProduct.getOwner()));
     doc.put("domain", getEntityWithDisplayName(dataProduct.getDomain()));
