@@ -3,7 +3,6 @@ package org.openmetadata.service.search.indexes;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 import org.openmetadata.schema.entity.data.StoredProcedure;
 import org.openmetadata.service.Entity;
 import org.openmetadata.service.search.ParseTags;
@@ -11,15 +10,8 @@ import org.openmetadata.service.search.SearchIndexUtils;
 import org.openmetadata.service.search.models.SearchSuggest;
 import org.openmetadata.service.util.JsonUtils;
 
-public class StoredProcedureIndex implements SearchIndex {
-
+public record StoredProcedureIndex(StoredProcedure storedProcedure) implements SearchIndex {
   private static final List<String> excludeFields = List.of("changeDescription");
-
-  final StoredProcedure storedProcedure;
-
-  public StoredProcedureIndex(StoredProcedure storedProcedure) {
-    this.storedProcedure = storedProcedure;
-  }
 
   public Map<String, Object> buildESDoc() {
     Map<String, Object> doc = JsonUtils.getMap(storedProcedure);
@@ -32,12 +24,13 @@ public class StoredProcedureIndex implements SearchIndex {
         "fqnParts",
         getFQNParts(
             storedProcedure.getFullyQualifiedName(),
-            suggest.stream().map(SearchSuggest::getInput).collect(Collectors.toList())));
+            suggest.stream().map(SearchSuggest::getInput).toList()));
     doc.put("suggest", suggest);
     doc.put("entityType", Entity.STORED_PROCEDURE);
     ParseTags parseTags =
         new ParseTags(Entity.getEntityTags(Entity.STORED_PROCEDURE, storedProcedure));
     doc.put("tags", parseTags.getTags());
+    doc.put("lineage", SearchIndex.getLineageData(storedProcedure.getEntityReference()));
     doc.put("tier", parseTags.getTierTag());
     doc.put("owner", getEntityWithDisplayName(storedProcedure.getOwner()));
     doc.put("service", getEntityWithDisplayName(storedProcedure.getService()));
