@@ -3,20 +3,14 @@ package org.openmetadata.service.search.indexes;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 import org.openmetadata.schema.entity.classification.Tag;
 import org.openmetadata.service.Entity;
 import org.openmetadata.service.search.SearchIndexUtils;
 import org.openmetadata.service.search.models.SearchSuggest;
 import org.openmetadata.service.util.JsonUtils;
 
-public class TagIndex implements SearchIndex {
-  final Tag tag;
+public record TagIndex(Tag tag) implements SearchIndex {
   private static final List<String> excludeFields = List.of("changeDescription");
-
-  public TagIndex(Tag tag) {
-    this.tag = tag;
-  }
 
   public Map<String, Object> buildESDoc() {
     Map<String, Object> doc = JsonUtils.getMap(tag);
@@ -27,8 +21,7 @@ public class TagIndex implements SearchIndex {
     doc.put(
         "fqnParts",
         getFQNParts(
-            tag.getFullyQualifiedName(),
-            suggest.stream().map(SearchSuggest::getInput).collect(Collectors.toList())));
+            tag.getFullyQualifiedName(), suggest.stream().map(SearchSuggest::getInput).toList()));
     if (tag.getDisabled() != null && tag.getDisabled()) {
       doc.put("disabled", tag.getDisabled());
     } else {
@@ -41,7 +34,7 @@ public class TagIndex implements SearchIndex {
 
   public static Map<String, Float> getFields() {
     Map<String, Float> fields = SearchIndex.getDefaultFields();
-    fields.put("classification.name", 1.0f);
+    fields.put("classification.name", 7.0f);
     return fields;
   }
 }
